# Pixelpulse2

./: .gitignore  .gitmodules  .travis.yml  Axes.qml  CMakeLists.txt  ChannelRow.qml  ContentPane.qml  DeviceRow.qml  DragDot.qml  Makefile  OverlayConstant.qml  OverlayPeriodic.qml  README.md  README_8md_source.html  SMU.cpp  SMU.h  SMU_8cpp_source.html  SMU_8h_source.html  SignalRow.qml  TimelineFlickable.qml  TimelineHeader.qml  Toolbar.qml  XYPlot.qml  annotated.html  appveyor.yml  azure-pipelines.yml  classCEE__Device.html  classCEE__Device__coll__graph.map  classCEE__Device__coll__graph.md5  classCEE__Device__inherit__graph.map  classCEE__Device__inherit__graph.md5  classChannelItem.html  classChannelItem__coll__graph.map  classChannelItem__coll__graph.md5  classDevice.html  classDeviceItem.html  classDeviceItem__coll__graph.map  classDeviceItem__coll__graph.md5  classDevice__coll__graph.map  classDevice__coll__graph.md5  (+155 more)
.github/scripts/: inside_flatpak_docker.sh
.github/workflows/: flatpakbuild.yml
CI/flatpak/: LICENSE  Makefile  README.md  org.adi.Pixelpulse2.json
CI/travis/: lib.sh
Plot/: CMakeLists.txt  FloatBuffer.cpp  FloatBuffer.h  PhosphorRender.cpp  PhosphorRender.h  plot.cpp  plot.pro  plugin.h  qmldir
SMU/: SMU.cpp  SMU.h  plugin.h  qmldir  smu.pro
debian/: .gitignore  README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  pixelpulse2.cron.d.ex  pixelpulse2.default.ex  pixelpulse2.desktop  pixelpulse2.doc-base.EX  pixelpulse2.install  pixelpulse2.substvars  pixelpulse2.udev  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/pixelpulse2/DEBIAN/: conffiles  control  md5sums
debian/pixelpulse2/usr/share/doc/pixelpulse2/: README.Debian  copyright
debian/source/: include-binaries
docs/: Doxyfile  mainpage.dox
icons/: pp2.icns
linux/: 70-smus.rules
phonehome/: phonehome.cpp  phonehome.hpp
qml/: AcquisitionSettingsDialog.qml  Arrow.qml  Axes.qml  AxisScale.qml  ChannelRow.qml  ColorControlDialog.qml  ContentPane.qml  Controller.qml  DeviceManagerPane.qml  DeviceRow.qml  DragDot.qml  FileDialog.qml  OverlayConstant.qml  OverlayPeriodic.qml  PlotPane.qml  Selector.qml  SignalRow.qml  StyleSlider.qml  TimelineFlickable.qml  TimelineHeader.qml  Toolbar.qml  ToolbarStyle.qml  XYPlot.qml  axesutils.js  dataexport.js  jsutils.js  main.qml  prunedjson.js  sesssave.js
scripts/: libjansson_build.sh
search/: all_61.js  all_63.js  all_64.js  all_65.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_73.js  all_74.js  all_75.js  all_7e.js  classes_63.js  classes_64.js  classes_65.js  classes_69.js  classes_6d.js  classes_6f.js  classes_73.js  classes_74.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_69.js  functions_6d.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  functions_75.js  functions_77.js  search.js  variables_69.js  variables_6d.js  variables_6f.js
utils/: backtracing.h  bossac_wrap.h  filedownloader.cpp  filedownloader.h  fileio.h  phone_home.h
